--- a/study.html
+++ b/study.html
@@ -3,16 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>index.html</title>
-  <style>
-    h1{
-      color: red;
-    }
-  </style>
+  <title>study.html</title>
 </head>
 <body>
-  <h1>인덱스 페이지</h1>
-  <p>p1</p>
-  <a href="study.html">study</a>
+  <h1>Study!</h1>
 </body>
 </html>
